kubernetes/apps/n8n/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: n8n
    spec:
      containers:
        - image: n8nio/n8n:2.41.2@sha256:1419c3c665b02531dd43d815ef62f573aa9b1307962162a08a349dc8a452e8bf
          name: n8n
          ports:
            - containerPort: 5678
          command:
            - /bin/sh
          args:
            - -c
            - sleep 5; n8n start
          resources:
            limits:
              memory: 4G
          volumeMounts:
            - mountPath: /home/node/.n8n
              name: n8n-pvc
      restartPolicy: Always
      volumes:
        - name: n8n-pvc
          persistentVolumeClaim:
            claimName: n8n-pvc
        - name: n8n-env
          secret:
            secretName: n8n-env
